# cookiecutter-cpp-vscode

./: README.md  cookiecutter.json
{{ cookiecutter.pkg_name }}/: CMakeLists.txt  LICENSE  README.md  vcpkg.json
{{ cookiecutter.pkg_name }}/.github/workflows/: cpp.yml
{{ cookiecutter.pkg_name }}/src/: main.cpp
